Cosas que se hicieron al hacer el test

--- a/Examples/Fork/Makefile
+++ b/Examples/Fork/Makefile
@@ -1,6 +1,7 @@
 CFLAGS  = -Wall -g -pthread
 SRC = fork_example.c
 PROG   = fork_example
+#CFLAGS=-g -Wall -DEXERCISE_OPEN
 
 all :
 	gcc $(CFLAGS) -o $(PROG) $(SRC)
